(lang dune 3.12)

(name lattice-boltzmann)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name lattice-boltzmann)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  dune
  owl)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
